bloonix-server (0.12) released at 2014-12-23

    * Fixed status switches from warning to critical if attempt max
      is reached.
    * Fixed nagios-wrapper/simple-wrapper handling.

bloonix-server (0.11) released at 2014-12-14

    * Improved the script to count elasticsearch documents for each
      service.
    * Improved script bloonix-delete-es-host-data.
    * Fixed message formatting for redirected messages.
    * Improved the interval handling for services in status
      WARNING, CRITICAL, UNKNOWN and INFO.

bloonix-server (0.10) released at 2014-12-05

    * Plugin results are now stored each time and not only
      by status switches.

bloonix-server (0.9) released at 2014-12-02

    * Changed the boot facility.
    * Allow multiple locations within the host id.

bloonix-server (0.8) released at 2014-11-17

    * bloonix-update-agent-host-config adds now the agent id
      as postfix to each host id.

bloonix-server (0.7) released at 2014-11-16

    * Added the prefix RAD (remote agent dead) to the mail subject
      for mails that are redirected to an admin if a remote
      agent seems to be dead.
    * Fix permissions of /etc/bloonix*.

bloonix-server (0.6) released at 2014-11-08

    * Fixed that volatile states will be hold until an administrator
      marks the status as viewed.

bloonix-server (0.5) released at 2014-11-06

    * Moved bloonix-plugin-loader and Plugin/Loader.pm
      to package bloonix-plugin-config.

bloonix-server (0.4) released at 2014-11-04

    * Fixed: rename the host id from id to host_id.

bloonix-server (0.3) released at 2014-11-01

    * Feature force_check for services implemented.
    * Skipping inactive companies in script
      bloonix-update-agent-host-config.
    * Updated the license information.

bloonix-server (0.2) released at 2014-10-24

    * Disable die_on_errors by default so that the logger
      does not die on errors.

bloonix-server (0.1) released at 2014-08-25

    * Initial public release.